src/scss/page/main/date.scss
@import "~scss/_mixins";

.pageMainDate {
	.wrapper { width: 704px; margin: 0px auto; padding: 40px 0px 80px 0px; user-select: none; }

	.headSimple { align-items: center; height: 32px; }
	.headSimple {
		.side.right { gap: 0px; }
		.side.right {
			.icon { width: 24px !important; height: 24px !important; }
			.icon.calendar { background-image: url('~img/icon/relation/date.svg'); }
			.icon.arrow { background-image: url('~img/arrow/dateSelectLight.svg'); }
			.icon.arrow.left { transform: rotateZ(180deg); }
		}
	}

	.categories { 
		display: flex; flex-direction: row; gap: 8px; margin: 0px 0px 12px 0px; align-items: center; justify-content: flex-start; flex-wrap: wrap; 
	}
	.categories {
		.icon.mention { width: 20px; height: 20px; margin: 0px 6px 0px 0px; background-image: url('~img/icon/mention.svg'); }
		.separator { content: ''; background-color:  var(--color-shape-secondary); width: 1px; height: 24px; }
	}

	.cell.c-type {
		.iconObject { display: none; }
	}

	.container { text-align: center; align-content: center; height: calc(100vh - 228px); }

	.wrapper {
		.iconWrapper {
			display: flex; width: 320px; height: 104px; border-radius: 320px; margin: 0px auto 10px; align-items: center; justify-content: space-around;
			background: radial-gradient(50% 50% at 50% 50%, #FFBCBC 26.04%, rgba(255, 230, 230, 0.00) 100%);
		}
		.iconWrapper {
			.icon { width: 72px; height: 72px; background-image: url('~img/icon/popup/confirm/error.svg'); }
		}
	}
}

